Update AnuncianteBeanTest.java without getFirst()